<?xml version="1.0" encoding="utf-8"?>
<resources>]
    <string name="null0"></string>
    <string name="app_name">极品钢琴加曲版</string>
    <string name="about"> 极品钢琴OL V4.302\n  梦魂☆梦回家族出品\n  【【此版本为非官方玩家自制！】】\n\n更新说明:\n 1.曲谱总数达到5000首\n 2.设置中新增“音块大小”设定，解决高分辨率音块过小问题\n 3.新增若干套男女服装，增加“套装”板块\n 4.音源扩增，低音低至C0，高音高至#F8，由原来76音变为90音\n 5.联网对战普通模式增加个人曲谱移调功能\n 6.删改并优化官方原版部分曲目\n \n 友情提示：\n 爱护身体，适度游戏。\n \n 极品钢琴加曲版/极品玩家服务器内测群：740988675\n 感谢各玩家的支持！\n \n 提供mid格式新曲或服装资源，反馈bug等请联系作者as2134u（QQ：2431548195）\n \n  鸣谢：\n 喵喵，小俊，小武，CWZ，七叶星果，ʚ橙七و 以及测试群内所有提供建议的朋友们</string>
    <string name="about_name">About</string>
    <string name="msg_name" />
    <string name="info_name" />
    <string name="settings_name">Settings</string>
    <string name="melodylist_name">Melody</string>
    <string name="background_sound">和弦</string>
    <string name="draw_speed">滑落速度(影响歌曲节奏)</string>
    <string name="back_sound">和弦音量(突出弹奏声音)</string>
    <string name="song_speed">歌曲速度调节：</string>
    <string name="b_s_sum">减小和弦音量,突出主弦.</string>
    <string name="b_s_open">打开和弦</string>
    <string name="b_s_open_1">和弦已打开</string>
    <string name="b_s_open_2">和弦已关闭</string>
    <string name="b_s_key">sound_check_box</string>
    <string name="b_s_vol">sound_vol</string>
    <string name="b_s_vol_title">和弦音量</string>
    <string name="b_s_vol_sum">减小和弦音量可以突出部分乐谱(流行音乐)的主弦弹奏效果。</string>
    <string name="nandu">难度</string>
    <string name="perfect">暴击</string>
    <string name="cool">很棒</string>
    <string name="great">完美</string>
    <string name="bad">一般</string>
    <string name="miss">失误</string>
    <string name="totle">总共</string>
    <string name="number">个数:</string>
    <string name="score">分数:</string>
    <string name="uget">你的分数:</string>
    <string name="hscore">最高分:</string>
    <string name="win">祝贺你,夺得此曲的冠军！</string>
    <string name="lose">很不幸,你差点就是冠军了</string>
    <string name="waiting">正在载入,请稍后...</string>
    <string name="waitloading">软件第一次运行时会预读曲谱信息,请稍等...</string>
    <string name="help_game_mode">就让美妙的曲子从你手中发出吧</string>
    <string name="help_free_mode">让你自由发挥的自由模式</string>
    <string name="help_practice_mode">为你提供了暂停功能的 教学模式</string>
    <string name="help_back_mode" />
    <string name="help_listen_mode">让极品钢琴为你自动弹奏内附的曲谱</string>
    <string name="help_keyboard_mode">双排的钢琴键盘</string>
    <string name="practice">练习模式</string>
    <string name="thanks" />
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_fb_contact_info_hint">Email, msn, gtalk, or whatever we can find you.</string>
    <string name="umeng_fb_contact_update_at">Updated at</string>
    <string name="umeng_fb_back">Back</string>
    <string name="umeng_fb_title">Feedback</string>
    <string name="umeng_fb_contact_title">Contact</string>
    <string name="umeng_fb_contact_info">Contact Info</string>
    <string name="umeng_fb_reply_content_hint">I want to tell</string>
    <string name="umeng_fb_send">Send</string>
    <string name="umeng_fb_reply_content_default">Your precious feedback are appriciated.</string>
    <string name="umeng_fb_reply_date_default">2013-3-12 13:24:00</string>
    <string name="umeng_fb_powered_by">Powered by</string>
    <string name="umeng_fb_notification_ticker_text">Got new reply</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">New reply: %s</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">You received %d new replies from the app developer.</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">新浪微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
</resources>
