<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:mySwitch="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/umeng_fb_conversation_header" android:background="#ff000000" android:layout_width="match_parent" android:layout_height="45dp" android:layout_alignParentTop="true">
        <Button android:textColor="#ffffffff" android:id="@+id/umeng_fb_back" android:background="@drawable/umeng_fb_btn_bg_selector" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/umeng_fb_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="25sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/umeng_fb_title" android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/umeng_fb_conversation_contact_entry" android:background="@color/umeng_fb_color_btn_pressed" android:layout_width="match_parent" android:layout_height="40dp" android:layout_below="@+id/umeng_fb_conversation_header">
        <TextView android:textSize="20sp" android:textColor="#ffffffff" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/umeng_fb_contact_info" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <ImageView android:layout_width="20dp" android:layout_height="15dp" android:layout_marginRight="5dp" android:src="@drawable/umeng_fb_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/umeng_fb_conversation_list_wrapper" android:background="@drawable/umeng_fb_conversation_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/umeng_fb_conversation_contact_entry">
        <ListView android:id="@+id/umeng_fb_reply_list" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:listSelector="@android:color/transparent" android:transcriptMode="alwaysScroll" android:cacheColorHint="@android:color/transparent" android:divider="@null" android:choiceMode="none" android:layout_above="@+id/umeng_fb_reply_content_wrapper" android:layout_alignParentTop="true" android:headerDividersEnabled="false"/>
        <RelativeLayout android:id="@+id/umeng_fb_reply_content_wrapper" android:background="#ff000000" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <Button android:textColor="#ffffffff" android:id="@+id/umeng_fb_send" android:background="@drawable/umeng_fb_btn_bg_selector" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/umeng_fb_send" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            <EditText android:id="@+id/umeng_fb_reply_content" android:background="#ffffffff" android:paddingLeft="5dp" android:paddingTop="5dp" android:paddingRight="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:hint="@string/umeng_fb_reply_content_hint" android:layout_toLeftOf="@+id/umeng_fb_send"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
