<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:mySwitch="http://schemas.android.com/apk/res-auto" android:background="#ffeeeeee" android:layout_width="match_parent" android:layout_height="48dp">
    <Button android:textSize="12sp" android:textColor="#ffffffff" android:id="@+id/umeng_socialize_title_bar_leftBt" android:background="@drawable/umeng_socialize_title_back_bt" android:layout_width="28dp" android:layout_height="28dp" android:layout_marginLeft="8dp" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
    <TextView android:textSize="20sp" android:textColor="@color/umeng_socialize_text_title" android:gravity="center" android:id="@+id/umeng_socialize_title_bar_middleTv" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/umeng_socialize_comment" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    <RelativeLayout android:gravity="center_horizontal" android:id="@+id/umeng_socialize_title_bar_middle_tab" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_centerHorizontal="true">
        <Button android:textSize="12sp" android:textColor="#ffffffff" android:id="@+id/umeng_socialize_title_middle_left" android:background="@drawable/umeng_socialize_title_tab_button_left" android:layout_width="98dp" android:layout_height="match_parent" android:text="@string/umeng_socialize_near_At"/>
        <Button android:textSize="12sp" android:textColor="#ffffffff" android:id="@+id/umeng_socialize_title_middle_right" android:background="@drawable/umeng_socialize_title_tab_button_right" android:layout_width="98dp" android:layout_height="match_parent" android:text="@string/umeng_socialize_friends" android:layout_toRightOf="@+id/umeng_socialize_title_middle_left"/>
    </RelativeLayout>
    <RelativeLayout android:gravity="center_horizontal" android:layout_width="48dp" android:layout_height="match_parent" android:layout_alignParentRight="true">
        <Button android:textSize="12sp" android:textColor="#ffffffff" android:id="@+id/umeng_socialize_title_bar_rightBt" android:background="@drawable/umeng_socialize_title_right_bt" android:layout_width="28dp" android:layout_height="28dp" android:layout_centerVertical="true"/>
        <ProgressBar android:gravity="center" android:id="@+id/umeng_socialize_title_bar_rightBt_progress" android:visibility="gone" android:layout_width="25dp" android:layout_height="25dp" android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView android:layout_alignParentBottom="true" style="@style/umeng_socialize_divider"/>
</RelativeLayout>
